--- a/build.gradle
+++ b/build.gradle
@@ -22,18 +22,17 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
-    jcenter()
 }
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.projectlombok:lombok')
-    //https://tube-life.tistory.com/14
-    testCompile('org.projectlombok:lombok')
-    annotationProcessor('org.projectlombok:lombok')
-    testAnnotationProcessor('org.projectlombok:lombok')
-    testCompile('org.springframework.boot:spring-boot-starter-test')
-
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('com.h2database:h2')
+
+    //https://tube-life.tistory.com/14 gradle 5버전일 경우에만 실행
+    //testCompile('org.projectlombok:lombok')
+    //annotationProcessor('org.projectlombok:lombok')
+    //testAnnotationProcessor('org.projectlombok:lombok')
+    testCompile('org.springframework.boot:spring-boot-starter-test')
 }
