--- a/build.gradle
+++ b/build.gradle
@@ -35,5 +35,7 @@ dependencies {
     //testCompile('org.projectlombok:lombok')
     //annotationProcessor('org.projectlombok:lombok')
     //testAnnotationProcessor('org.projectlombok:lombok')
+    compile('org.springframework.boot:spring-boot-starter-mustache')
+    compile('org.springframework.boot:spring-boot-starter-oauth2-client')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
